# model-wrangler

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  tox.ini
src/modelserve/: __main__.py  cli.py  model_handlers.py  models.py  request_handlers.py
src/wrangler/: __init__.py  __main__.py  cli.py  model_handlers.py  models.py  request_handlers.py
test/: test__main__.py  test_integration.py
test/assets/hf-internal-testing_unidiffuser-test-v1/: model_index.json
test/assets/hf-internal-testing_unidiffuser-test-v1/clip_tokenizer/: tokenizer_config.json
test/assets/hf-internal-testing_unidiffuser-test-v1/image_encoder/: config.json
test/assets/hf-internal-testing_unidiffuser-test-v1/image_processor/: preprocessor_config.json
test/assets/hf-internal-testing_unidiffuser-test-v1/scheduler/: scheduler_config.json
test/assets/hf-internal-testing_unidiffuser-test-v1/text_decoder/: config.json
test/assets/hf-internal-testing_unidiffuser-test-v1/text_encoder/: config.json
test/assets/hf-internal-testing_unidiffuser-test-v1/text_tokenizer/: added_tokens.json  special_tokens_map.json  tokenizer_config.json
test/assets/hf-internal-testing_unidiffuser-test-v1/unet/: config.json
test/assets/hf-internal-testing_unidiffuser-test-v1/vae/: config.json
