[project]
name = "zettafi-model-wrangler"
description = "Utility to easily work with models"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Adam L. Englander", email = "adam@zetta.fi"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    # Models
    "diffusers[torch]~=0.17",
    "transformers[torch]~=4.30",
    "accelerate~=0.20",
    "safetensors~=0.3",
    "einops~=0.6",

    # Server
    "fastapi~=0.97",
    "hypercorn~=0.14",

    # CLI
    "click~=8.1",
]

[project.urls]
Chat = "https://github.com/Zettafi/model-wrangler/discussions"
"Source Code" = "https://github.com/Zettafi/model-wrangler"
"Issue Tracker" = "https://github.com/Zettafi/model-wrangler/issues"

[project.scripts]
wrangler = "wrangler.__main__:main"

[project.optional-dependencies]
build = [
    "build~=0.10",
    "twine~=4.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "wrangler.__version__"}

[tool.coverage.run]
branch=true

[tool.coverage.report]
omit = ["test/*"]
precision = 2

[tool.black]
line-length=100


[tool.mypy]
python_version = "3.10"
